[gd_scene load_steps=9 format=3 uid="uid://xs3qymoiauid"]

[ext_resource type="Script" path="res://scripts/ui/PressStartScreen.gd" id="3"]
[ext_resource type="FontFile" uid="uid://dp64bvv6uha1i" path="res://assets/ui/font/advanced_pixel-7.ttf" id="3_ym7q5"]
[ext_resource type="VideoStream" path="res://assets/ui/starting-screen.ogv" id="4_hxygk"]
[ext_resource type="VideoStream" path="res://assets/ui/starting-fixe.ogv" id="5_h07bc"]

[sub_resource type="Animation" id="2"]
resource_name = "FadeInFadeOut"
length = 2.0
loop_mode = 1

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressStartLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="4"]
resource_name = "SlideOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressStartLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1920, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6654j"]
_data = {
"FadeInFadeOut": SubResource("2"),
"RESET": SubResource("3"),
"SlideOut": SubResource("4")
}

[node name="PressStartScreen" type="Panel"]
script = ExtResource("3")

[node name="PressStartLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PressStartLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6654j")
}

[node name="startingFixe" type="VideoStreamPlayer" parent="PressStartLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource("5_h07bc")
expand = true

[node name="version" type="Label" parent="PressStartLayer"]
offset_left = 1395.0
offset_top = 986.0
offset_right = 1912.0
offset_bottom = 1071.0
theme_override_fonts/font = ExtResource("3_ym7q5")
theme_override_font_sizes/font_size = 40
text = "ALPHA PRE RELEASE V0.3-YOGURT-X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartingScreen" type="VideoStreamPlayer" parent="PressStartLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource("4_hxygk")
autoplay = true
expand = true

[connection signal="animation_finished" from="PressStartLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="PressStartLayer/StartingScreen" to="." method="_on_starting_screen_finished"]
